# File-Backup-System

Documents/: Rust Project Progress Report (21:10:2025).docx
main-project/: .gitignore  Cargo.toml  backup_metadata.json  backup_settings.json
main-project/src/: backup.rs  backup_metadata.json  backup_settings.json  daemon.rs  iced.rs  main.rs  new_gui.rs
test/: Cargo copy.toml  backup_metadata copy.json
test/src/: backup.rs  daemon.rs  main.rs  new_gui.rs  test.rs  ui.rs
